Support adding logs for the output mode in the native code